@startuml
entity Usuario {
  *id: INTEGER <<PK>>
  --
  email: VARCHAR(255)
  first_name: VARCHAR(150)
  last_name: VARCHAR(150)
}

entity Casa {
  *id: INTEGER <<PK>>
  --
  nome: VARCHAR(255)
  endereco: TEXT
  timezone: VARCHAR(50)
  --
  *usuario_id: INTEGER <<FK>>
}

entity Comodo {
  *id: INTEGER <<PK>>
  --
  nome: VARCHAR(255)
  background_url: VARCHAR(255)
  --
  *casa_id: INTEGER <<FK>>
}

entity TipoDispositivo {
  *id: INTEGER <<PK>>
  --
  nome: VARCHAR(50)
  icone: VARCHAR(50)
  categoria: VARCHAR(50)
}

entity Dispositivo {
  *id: INTEGER <<PK>>
  --
  nome: VARCHAR(255)
  estado: BOOLEAN
  ativo: BOOLEAN
  --
  *tipo_id: INTEGER <<FK>>
  *comodo_id: INTEGER <<FK>>
}

entity Cena {
  *id: INTEGER <<PK>>
  --
  nome: VARCHAR(255)
  descricao: TEXT
  ativa: BOOLEAN
  favorita: BOOLEAN
  indisponivel_ate: DATETIME
  --
  *casa_id: INTEGER <<FK>>
}

entity AcaoCena {
  *id: INTEGER <<PK>>
  --
  ordem: INTEGER
  intervalo_tempo: FLOAT
  estado_desejado: BOOLEAN
  condicional: BOOLEAN
  --
  *dispositivo_id: INTEGER <<FK>>
  *cena_id: INTEGER <<FK>>
}

entity LogDispositivo {
  *id: INTEGER <<PK>>
  --
  estado_anterior: BOOLEAN
  estado_novo: BOOLEAN
  origem: VARCHAR(50)
  timestamp: DATETIME
  --
  *dispositivo_id: INTEGER <<FK>>
  *usuario_id: INTEGER <<FK>>
  *cena_id: INTEGER <<FK>>
}

Usuario ||--o{ Casa
Casa ||--o{ Comodo
Casa ||--o{ Cena
Comodo ||--o{ Dispositivo
TipoDispositivo ||--o{ Dispositivo
Cena ||--o{ AcaoCena
Dispositivo ||--o{ AcaoCena
Dispositivo ||--o{ LogDispositivo
Usuario ||--o{ LogDispositivo
Cena ||--o{ LogDispositivo
@enduml